--- a/ableton.html
+++ b/ableton.html
@@ -33,14 +33,14 @@
     <div>
         <img src="abletonHomeImage.png" alt="Ableton Home Image">
     </div>
-    <div>
+    <div class="boldBody">
         <pre>We make <a href="#live">Live</a>, <a href="#push">Push</a>, <a href="#note">Note</a> and <a href="#link">Link</a> — unique software and <br>hardware for music creation and performance. With these <br>products, our community of users creates amazing things.</pre>
     </div>
     <div>
         <pre>Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a<br> community of dedicated musicians, sound designers, and artists from across the world.</pre>
     </div>
     <img src="" alt="Image not available.">
-    <div>
+    <div class="boldBody">
         <pre>Making music isn’t easy. It takes time, effort, and learning. But <br>when you’re in the flow, it’s incredibly rewarding.</pre>
     </div>
     <div>
@@ -51,15 +51,15 @@
     <div><pre>We are more than 350 people from 30 different countries divided between our headquarters in Berlin and our offices in Los Angeles and Tokyo.</pre></div>
     <div><pre>Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day. We come from a wide range of cultural and professional backgrounds. Some of us have PhDs, some are self-taught, and most of us are somewhere in between. What connects us is the shared belief that each of us has the skills and knowledge to contribute to something big: helping to shape the future of music culture.</pre></div>
     <img src="" alt="Image not available.">
-    <div><pre>We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.</pre></div>
+    <div class="boldBody"><pre>We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.</pre></div>
     <div><pre>Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow. We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t always agree with each other, but opinion and debate are valued and openly encouraged.</pre></div>
     <img src="graphs.png" alt="Image not available.">
-    <div><pre>We’re passionate about what we do, but we’re equally passionate about improving who we are.</pre></div>
+    <div class="boldBody"><pre>We’re passionate about what we do, but we’re equally passionate about improving who we are.</pre></div>
     <div><pre>We work hard to foster an environment where people can grow both personally and professionally, and we strive to create a wealth of opportunities to learn from and with each other.
 
         Alongside an internal training program, employees are actively supported in acquiring new knowledge and skills, and coached on applying these in their daily work. In addition, staff-organized development and music salons are a chance to discuss new technologies, production techniques and best practices.</pre></div>
     <img src="" alt="Image not available.">
-    <div><pre>We want our employees to love it here. Since we’re looking for exceptional talent from around the world, we will do everything we can to make your transition as easy as possible.</pre></div>
+    <div class="boldBody"><pre>We want our employees to love it here. Since we’re looking for exceptional talent from around the world, we will do everything we can to make your transition as easy as possible.</pre></div>
     <div><pre>If you're joining us in Berlin, we'll help with relocation and paperwork. We’ll even provide you with free German or English lessons. Plus, working in Germany means you can expect comprehensive health insurance for you and your family, as well as generous maternity and paternity leave. Office hours are flexible, but it’s not all work; we have several company and team outings throughout the year as well as a variety of fun, informal small-group activities.
     </pre></div>
     <div>  
