--- a/q2.html
+++ b/q2.html
@@ -130,7 +130,7 @@
                     <th>Email</th>
                     <th>Phone</th>
                     <th>Resume</th>
-                    <th></th>
+                    <th>Cover Letter</th>
                     <!-- Add more columns as needed -->
                 </tr>
             </thead>
