--- a/ableton.html
+++ b/ableton.html
@@ -41,7 +41,7 @@
     </div>
    
     <div>
-        <img src="abletonHomeImage.png" alt="Ableton Home Image">
+        <img src="abletonHomeImage.png" alt="Ableton Home Image" class="homeImage">
     </div>
     <div class="boldBody">
         <pre>We make <a href="#live">Live</a>, <a href="#push">Push</a>, <a href="#note">Note</a> and <a href="#link">Link</a> — unique software and <br>hardware for music creation and performance. With these <br>products, our community of users creates amazing things.</pre>
